Fix API endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/LACountyLibraryBot/v15/Server/sqlite3/db.lock
+/.vs/LACountyLibraryBot/v15/sqlite3/db.lock
